ffi/poc/python/gen/out/nounk/ak_abi.h

/* ---- section 5: errors (plan.FIXED.codes) ------------------------------------- */
#define AK_OK                    0      /* success */
#define AK_ALREADY_INITIALIZED   1      /* success: ak_init called again with the same options */
#define AK_ABI_VERSION 1u
#define AK_INIT_NO_PANIC_HOOK  2u
#define AK_INIT_NO_CRYPTO      4u
/* ABI v1 section 3: the host's log sink. */
typedef void (*ak_log_fn)(void *ctx, uint32_t level, const uint8_t *msg, size_t msg_len);
/* ak_init's out-parameter (ABI v1 section 3/5): a code and a detail. */
struct ak_err {
  int32_t code;
  uint32_t detail;
};
typedef struct ak_err ak_err;
/* ak_init's options (ABI v1 section 3). */
struct ak_init_opts {
  uint32_t abi_version;
  uint32_t flags;
  ak_log_fn log;
  void *log_ctx;
};
typedef struct ak_init_opts ak_init_opts;
/* ---- the fixed entry points (plan.FIXED.functions) ----------------------------- */
/* lifecycle */
/* Once per process, before anything else (plan.lifecycle). */
int32_t ak_init(const struct ak_init_opts *opts, struct ak_err *err);
/* ---- section 9: the RPC half (plan.rpc, R-G5) -----------------------------------
 * Declared only here. A host never hand-declares one of these: R-D2 was a 3-field
 * copy of a 6-field struct, R-G5 a `u64` timeout declared `i32` on one side. */
typedef struct ak_runtime ak_runtime;
typedef struct ak_client ak_client;
typedef struct ak_call ak_call;
typedef struct ak_queue ak_queue;
/* A byte range the core owns until the host releases it with `ak_bytes_free`. */
struct ak_bytes {
  const uint8_t *ptr;
  size_t len;
  void *owner;  /* The core's handle on the allocation. The host passes it back and does not read it. */
};
typedef struct ak_bytes ak_bytes;
/* What a completion carries. Released with `ak_bytes_free`, as the blocking delivery's bytes are, so a host has one release path whichever delivery it takes. */
struct ak_completion {
  uint64_t tag;
  int32_t status;
  struct ak_bytes bytes;
};
typedef struct ak_completion ak_completion;
/* The transport settings ArmoniK pins. The stream and the connection window are separate settings on tonic/hyper, so both are here. Zero means "the stack's". */
struct ak_client_opts {
  uint32_t stream_window;  /* SETTINGS_INITIAL_WINDOW_SIZE per stream; 0 = default. ArmoniK: 4 MiB. */
  uint32_t connection_window;  /* The connection-level window, a SEPARATE setting; 0 = default. */
  int32_t adaptive_window;  /* 1 on, 0 off, -1 default (off). Overrides both windows when on. */
  uint32_t max_recv_message;  /* Largest message accepted, bytes; 0 = default. */
  uint32_t max_send_message;  /* Largest message sent, bytes; 0 = default. */
  int32_t tcp_nagle;  /* ArmoniK's tcp_nagle_algorithm: 1 Nagle on, 0 off, -1 default. ArmoniK ships it OFF. */
};
typedef struct ak_client_opts ak_client_opts;
/* Called ONCE per call, on a thread the core owns. */
typedef void (*ak_completion_cb)(void *user_data, struct ak_completion *comp);
#define AK_QUEUE_OK 0  /* `ak_queue_next` returned a completion. */
#define AK_QUEUE_TIMEOUT 1  /* The timeout expired with no completion. Not an error. */
#define AK_QUEUE_SHUTDOWN 2  /* The queue is shutting down and is drained. */
ak_runtime *ak_runtime_new(uint32_t worker_threads);
void ak_runtime_destroy(ak_runtime *r);
ak_client *ak_client_new(ak_runtime *r, const uint8_t *uri, size_t uri_len);
/* A client with the transport pinned. NULL options = `ak_client_new`. */
ak_client *ak_client_new_opts(ak_runtime *r, const uint8_t *uri, size_t uri_len, const struct ak_client_opts *opts);
void ak_client_destroy(ak_client *c);
/* Blocking delivery: one crossing in, `ak_bytes_free` the only other. */
int32_t ak_call_unary(ak_client *c, const uint8_t *path, size_t path_len, const uint8_t *req, size_t req_len, struct ak_bytes *out);
void ak_bytes_free(struct ak_bytes *b);
/* Callback delivery: 2 forward crossings and 1 reverse. */
ak_call *ak_call_unary_cb(ak_client *c, const uint8_t *path, size_t path_len, const uint8_t *req, size_t req_len, ak_completion_cb cb, void *user_data, uint64_t tag);
/* Completion-queue delivery: no upcall. 3 forward crossings and 0 reverse. */
ak_call *ak_call_unary_q(ak_client *c, const uint8_t *path, size_t path_len, const uint8_t *req, size_t req_len, ak_queue *q, uint64_t tag);
ak_queue *ak_queue_new(void);
/* Wait up to `timeout_ms` for one completion. R-G5: `u64`, as the core defines it. */
int32_t ak_queue_next(ak_queue *q, struct ak_completion *out, uint64_t timeout_ms);
void ak_queue_shutdown(ak_queue *q);
void ak_queue_destroy(ak_queue *q);
void ak_call_cancel(ak_call *h);
void ak_call_destroy(ak_call *h);
/* RPC boundary-call counts (counting build). Exported by a core built with `rpc`. */
struct ak_rpc_counters {
  uint64_t forward;
  uint64_t reverse;
};
/* 1 if this core counts RPC crossings. */
int32_t ak_rpc_counting(void);
void ak_rpc_counters(struct ak_rpc_counters *out);
void ak_rpc_counters_reset(void);