ffi/poc/csharp/src/Rpc/Generated/RpcAbi.cs

// @generated by ffi/poc/codec/gen/cs_binding.py (driven by ffi/poc/csharp/gen/generate.py)
// from ffi/schema/shapes.json. Do not edit: `gen/generate.py --check` fails if this file is not
// what the generator writes today.
//
// ABI v1 section 9, the RPC half, declared for C# from plan.rpc.

using System;
using System.Collections.Generic;
using System.Runtime.CompilerServices;
using System.Runtime.InteropServices;

namespace Armonik.Ffi.Rpc;

/// A byte range the core owns until the host releases it with `ak_bytes_free`.
[StructLayout(LayoutKind.Sequential)]
public struct ak_bytes
{
    public IntPtr ptr;
    public nuint len;
    public IntPtr owner;
}

/// What a completion carries. Released with `ak_bytes_free`, as the blocking delivery's
/// bytes are, so a host has one release path whichever delivery it takes.
[StructLayout(LayoutKind.Sequential)]
public struct ak_completion
{
    public ulong tag;
    public int status;
    public ak_bytes bytes;
}

/// The transport settings ArmoniK pins. The stream and the connection window are
/// separate settings on tonic/hyper, so both are here. Zero means "the stack's".
[StructLayout(LayoutKind.Sequential)]
public struct ak_client_opts
{
    public uint stream_window;
    public uint connection_window;
    public int adaptive_window;
    public uint max_recv_message;
    public uint max_send_message;
    public int tcp_nagle;
}

/// ak_init's options (ABI v1 section 3).
[StructLayout(LayoutKind.Sequential)]
public struct ak_init_opts
{
    public uint abi_version;
    public uint flags;
    public IntPtr log;
    public IntPtr log_ctx;
}

/// ak_init's out-parameter (ABI v1 section 3/5): a code and a detail.
[StructLayout(LayoutKind.Sequential)]
public struct ak_err
{
    public int code;
    public uint detail;
}

/// RPC boundary-call counts (counting build).
[StructLayout(LayoutKind.Sequential)]
public struct ak_rpc_counters
{
    public ulong forward;
    public ulong reverse;
}

public static unsafe partial class AkRpc
{
    public const string Lib = "ak_core";
    static AkRpc() { RpcInit.Run(); }

    /// `ak_queue_next` returned a completion.
    public const int AK_QUEUE_OK = 0;
    /// The timeout expired with no completion. Not an error.
    public const int AK_QUEUE_TIMEOUT = 1;
    /// The queue is shutting down and is drained.
    public const int AK_QUEUE_SHUTDOWN = 2;
    public const uint AK_ABI_VERSION = 1u;
    public const uint AK_INIT_NO_PANIC_HOOK = 2u;
    public const uint AK_INIT_NO_CRYPTO = 4u;
    public const int AK_OK = 0;
    public const int AK_ALREADY_INITIALIZED = 1;

#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_init(ak_init_opts* opts, ak_err* err);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_init(ak_init_opts* opts, ak_err* err);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial IntPtr ak_runtime_new(uint worker_threads);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern IntPtr ak_runtime_new(uint worker_threads);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial void ak_runtime_destroy(IntPtr r);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern void ak_runtime_destroy(IntPtr r);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial IntPtr ak_client_new(IntPtr r, byte* uri, nuint uri_len);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern IntPtr ak_client_new(IntPtr r, byte* uri, nuint uri_len);
#endif
    /// A client with the transport pinned. NULL options = `ak_client_new`.
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial IntPtr ak_client_new_opts(IntPtr r, byte* uri, nuint uri_len, ak_client_opts* opts);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern IntPtr ak_client_new_opts(IntPtr r, byte* uri, nuint uri_len, ak_client_opts* opts);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial void ak_client_destroy(IntPtr c);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern void ak_client_destroy(IntPtr c);
#endif
    /// Blocking delivery: one crossing in, `ak_bytes_free` the only other.
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_call_unary(IntPtr c, byte* path, nuint path_len, byte* req, nuint req_len, ak_bytes* @out);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_call_unary(IntPtr c, byte* path, nuint path_len, byte* req, nuint req_len, ak_bytes* @out);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial void ak_bytes_free(ak_bytes* b);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern void ak_bytes_free(ak_bytes* b);
#endif
    /// Callback delivery: 2 forward crossings and 1 reverse.
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial IntPtr ak_call_unary_cb(IntPtr c, byte* path, nuint path_len, byte* req, nuint req_len, delegate* unmanaged[Cdecl]<IntPtr, ak_completion*, void> cb, IntPtr user_data, ulong tag);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern IntPtr ak_call_unary_cb(IntPtr c, byte* path, nuint path_len, byte* req, nuint req_len, delegate* unmanaged[Cdecl]<IntPtr, ak_completion*, void> cb, IntPtr user_data, ulong tag);
#endif
    /// Completion-queue delivery: no upcall. 3 forward crossings and 0 reverse.
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial IntPtr ak_call_unary_q(IntPtr c, byte* path, nuint path_len, byte* req, nuint req_len, IntPtr q, ulong tag);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern IntPtr ak_call_unary_q(IntPtr c, byte* path, nuint path_len, byte* req, nuint req_len, IntPtr q, ulong tag);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial IntPtr ak_queue_new();
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern IntPtr ak_queue_new();
#endif
    /// Wait up to `timeout_ms` for one completion. R-G5: `u64`, as the core defines it.
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_queue_next(IntPtr q, ak_completion* @out, ulong timeout_ms);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_queue_next(IntPtr q, ak_completion* @out, ulong timeout_ms);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial void ak_queue_shutdown(IntPtr q);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern void ak_queue_shutdown(IntPtr q);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial void ak_queue_destroy(IntPtr q);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern void ak_queue_destroy(IntPtr q);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial void ak_call_cancel(IntPtr h);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern void ak_call_cancel(IntPtr h);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial void ak_call_destroy(IntPtr h);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern void ak_call_destroy(IntPtr h);
#endif
    /// 1 if this core counts RPC crossings.
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_rpc_counting();
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_rpc_counting();
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial void ak_rpc_counters(ak_rpc_counters* @out);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern void ak_rpc_counters(ak_rpc_counters* @out);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial void ak_rpc_counters_reset();
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern void ak_rpc_counters_reset();
#endif
}

public static unsafe class RpcInit
{
    public const uint Flags = AkRpc.AK_INIT_NO_CRYPTO | AkRpc.AK_INIT_NO_PANIC_HOOK;
    public static int Code { get; private set; } = int.MinValue;
    public static void Ensure() => RuntimeHelpers.RunClassConstructor(typeof(AkRpc).TypeHandle);
    internal static void Run()
    {
        if (Environment.GetEnvironmentVariable("AK_GATE_PLANT_NO_INIT") == "1") { Code = -999; return; }
        var o = new ak_init_opts { abi_version = AkRpc.AK_ABI_VERSION, flags = Flags };
        var e = new ak_err();
        int rc = AkRpc.ak_init(&o, &e);
        Code = rc;
        if (rc != AkRpc.AK_OK && rc != AkRpc.AK_ALREADY_INITIALIZED)
            throw new InvalidOperationException($"ak_init failed: {rc} (code {e.code}, detail {e.detail})");
    }
}
